<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kimonik.mypublicmodule.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_home_001"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/opengltest"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_home_002"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/okgotest"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_home_003"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/commonadapterttest"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_home_004"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/videoviewtest"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_home_005"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/soundTest"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_home_006"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lotteryviewtest"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_home_007"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/scrollviewtest"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/bt_home_008"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/customviewpager"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/bt_home_009"
            style="@style/HomeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lotteryviewtest"
            android:textAllCaps="false" />

    </LinearLayout>


</ScrollView>
