<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kimonik.utilsmodule.ui.MTopBarView
        android:id="@+id/mtb_act_okgo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorQianLan"
        app:centerText="@string/okgotest"
        app:leftImage="@drawable/xvector_back"

        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/tv_act_okgotest_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </ScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/colorQianLan"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/qingqiuurl"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_act_okgotest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/colorQianLan"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/qingqiucanshu"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_act_okgotest_params"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="12sp"
            android:hint="@string/canshutishi"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_act_okgotest_get"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/get"
            android:background="@color/colorQianLan"
            />
        <TextView
            android:id="@+id/tv_act_okgotest_post"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/post"
            />
        <TextView
            android:id="@+id/tv_act_okgotest_file"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/file"
            />
        <TextView
            android:id="@+id/tv_act_okgotest_bitmap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/bitmap"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_act_okgotest_sendrequest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="@color/colorQianLan"
        android:gravity="center"
        android:text="@string/fasongqingqiu"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>